--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Music</string>
+    <string name="BACK">后退</string>
+    <string name="songtitle">歌曲名字</string>
+
 </resources>
