完成歌曲列表(实现传值歌名、歌手、封面、品质，音乐目前为本地资源)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">Music</string>
     <string name="BACK">后退</string>
     <string name="songtitle">歌曲名字</string>
+    <string name="qingxidu">品质</string>
+    <string name="singer">歌手</string>
 
 </resources>
